# xaitk-saliency

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Maintainer_Guide_GitLab_to_GitHub.md  README.md  ROADMAP.md  codecov.yml  docker-compose.yml  poetry.toml  pyproject.toml  sonar-project.properties
.github/actions/build-stage/: action.yml
.github/actions/quality-stage/: action.yml
.github/actions/test-stage/: action.yml
.github/workflows/: .github-notebook-testing.yml  .github-publish.yml  .github-quality.yml  .github-test.yml  .github-unit-testing.yml  ci-example-notebooks.yml  ci-unittests.yml  cml-example.yml  codeql.yml  publish.yml
.gitlab-ci/: .gitlab-build.yml  .gitlab-docs.yml  .gitlab-quality.yml  .gitlab-security.yml  .gitlab-shared.yml  .gitlab-test.yml
cml_example/: .gitignore  README.md  requirements.txt  train.py
docs/: .gitattributes  api_docs.rst  conf.py  design.rst  faq.rst  getting_started.rst  glossary.rst  implementations.rst  index.rst  installation.rst  interfaces.rst  introduction.rst  local_sonarqube_testing.rst  miscelaneous.rst  miscellaneous.rst  readthedocs-reqs.txt  release_notes.rst  release_process.rst  releasing.rst  review_process.rst  sphinx_server.py  xaitk_explanation.rst  xaitk_how_to_topics.rst
docs/_templates/: custom-class-template.rst
docs/examples/: DRISE.ipynb  MC_RISE.ipynb  MNIST_scikit_saliency.ipynb  ModelComparisonWithSaliency.ipynb  OcclusionSaliency.ipynb  README.md  Radial_Image_Perturbation.ipynb  SerializedDetectionSaliency.ipynb  SimilarityScoring.ipynb  SuperPixelSaliency.ipynb  SwappableImplementations.ipynb  VIAME_OcclusionSaliency.ipynb  atari_deepRL_saliency.ipynb  covid_classification.ipynb
docs/figures/: api-docs-fig-01.dot
docs/misc/: local_sonarqube_testing.rst  setting_up_sonarcloud.rst  style_sheet.rst
docs/release_notes/: pending_release.rst  v0.10.0.rst  v0.11.0.rst  v0.12.0.rst  v0.13.0.rst  v0.14.0.rst  v0.14.1.rst  v0.14.2.rst  v0.15.0.rst  v0.2.0.rst  v0.3.0.rst  v0.3.1.rst  v0.4.0.rst  v0.5.0.rst  v0.6.0.rst  v0.6.1.rst  v0.7.0.rst  v0.8.0.rst  v0.8.1.rst  v0.8.2.rst  v0.8.3.rst  v0.9.0.rst  v0.9.1.rst  v0.9.2.rst
docs/release_notes/pending_release/: add-py313.rst  add-py314.rst  drop-py39.rst  pending_release.rst  pin-setuptools-upper-bound.rst  remove-scikit-image-hinge.rst  sal_metric_utils.rst  upgrade-poetry22.rst
examples/: .gitignore  DRISE.ipynb  EdgeCaseSaliency.ipynb  MC_RISE.ipynb  MNIST_scikit_saliency.ipynb  ModelComparisonWithSaliency.ipynb  OcclusionSaliency.ipynb  README.md  Radial_Image_Perturbation.ipynb  Scikit.ipynb  SerializedDetectionSaliency.ipynb  SimilarityScoring.ipynb  SuperPixelSaliency.ipynb  VIAME_OcclusionSaliency.ipynb  atari_deepRL_saliency.ipynb  catdog-LICENSE.txt  covid_classification.ipynb  fsal.ipynb
examples/figures/: gen_classifier_conf_sal_diagram.dot  perturb_occlude_diagram.dot
scripts/: .gitignore  check_for_release_notes.sh  check_markdown_links.pl  combine_release_notes.sh  update_release_notes.sh
src/xaitk_saliency/: __init__.py  exceptions.py
src/xaitk_saliency/impls/: __init__.py
src/xaitk_saliency/interfaces/: __init__.py  gen_classifier_conf_sal.py  gen_descriptor_sim_sal.py  gen_detector_prop_sal.py  gen_image_classifier_blackbox_sal.py  gen_image_similarity_blackbox_sal.py  gen_object_detector_blackbox_sal.py  image_saliency_metric.py  perturb_image.py  saliency_metric.py
src/xaitk_saliency/utils/: __init__.py  coco.py  detection.py  masking.py  sal_metrics.py
tests/: __init__.py  test_utils.py
tests/data/: OccScorSal.npy  SimilaritySal.npy  class_rise_sal.npy  coco_sal_maps.npy  config.json  drisesal.npy  exp_drise_stack_res.npy  exp_random_grid_stack_res.npy  exp_rise_stack_res.npy  exp_sbsm_stack_res.npy  mismatched_dets.json  test_dets.json
tests/impls/gen_classifier_conf_sal/: test_mc_rise_scoring.py  test_occlusion.py  test_occlusion_scoring.py  test_rise_scoring.py  test_squared_difference_scoring.py
tests/impls/gen_descriptor_sim_sal/: test_similarity_scoring.py
tests/impls/gen_detector_prop_sal/: test_drise_scoring.py
tests/impls/gen_image_classifier_blackbox_sal/: test_mc_rise.py  test_occlusion_based.py  test_rise.py  test_slidingwindow.py
tests/impls/gen_image_similarity_blackbox_sal/: test_sbsm.py  test_sim_occlusion_based.py
tests/impls/gen_object_detector_blackbox_sal/: test_drise.py  test_occlusion_based.py  test_random_grid.py
tests/impls/gen_similarity_sal/: test_similarity_scoring.py
tests/impls/image_saliency_metric/: test_entropy.py
tests/impls/perturb_image/: test_mc_rise.py  test_random_grid.py  test_rise.py  test_sliding_radial.py  test_sliding_window.py
tests/impls/saliency_metric/: saliency_metric_utils.py  test_entropy.py
tests/impls/vis_sal_classifier/: test_occlusion_classifier.py  test_rise_scoring.py
tests/interfaces/: test_gen_classifier_conf_sal.py  test_gen_descriptor_sim_sal.py  test_gen_detection_sal.py  test_gen_detector_prop_sal.py  test_gen_image_classifier_blackbox_sal.py  test_gen_image_similarity_blackbox_sal.py  test_gen_object_detector_blackbox_sal.py  test_gen_similarity_sal.py  test_perturb_image.py  test_vis_sal_classifier.py  test_vis_sal_detection.py  test_vis_sal_image_classifier_blackbox.py  test_vis_sal_similarity.py
tests/utils/: __init__.py  test_coco.py  test_det_sal_on_img_dir.py  test_detection.py  test_gen_coco_sal.py  test_gen_detector_sal.py  test_masking.py  test_sal_metrics.py  test_sal_on_coco_dets.py
xaitk_saliency/: __init__.py  exceptions.py
xaitk_saliency/interfaces/: gen_classifier_conf_sal.py  gen_descriptor_sim_sal.py  gen_detector_prop_sal.py  gen_image_classifier_blackbox_sal.py  gen_image_similarity_blackbox_sal.py  gen_object_detector_blackbox_sal.py  perturb_image.py  saliency.py  vis_sal_classifier.py  vis_sal_detection.py  vis_sal_image_classifier_blackbox.py  vis_sal_similarity.py
xaitk_saliency/utils/: coco.py  detection.py  gen_coco_sal.py  masking.py
(+79 files in other folders)
